src/main/java/com/etf/rti/p1/bnf/bnfParser.java
// Generated from /speedo/IdeaProjects/JavaProject/src/main/resources/bnf.g4 by ANTLR 4.5.1
package com.etf.rti.p1.bnf;

    import java.io.OutputStream;
    import java.io.PrintStream;
    import com.etf.rti.p1.generator.AParser;
    import org.apache.commons.lang3.StringEscapeUtils;
    import java.util.LinkedList;
    import com.etf.rti.p1.ebnf.elements.Nonterminal;
    import com.etf.rti.p1.ebnf.elements.Terminal;
    import com.etf.rti.p1.ebnf.rules.IRule;
    import com.etf.rti.p1.ebnf.rules.SimpleRule;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class bnfParser extends AParser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN=1, LPAREN=2, RPAREN=3, LBRACE=4, RBRACE=5, LEND=6, REND=7, BAR=8, 
		GT=9, LT=10, TERMINAL=11, ID=12, LETTER=13, WS=14;
	public static final int
		RULE_init = 0, RULE_rulelist = 1, RULE_rule_ = 2, RULE_lhs = 3, RULE_rhs = 4, 
		RULE_alternatives = 5, RULE_alternative = 6, RULE_element = 7, RULE_optional = 8, 
		RULE_zeroormore = 9, RULE_oneormore = 10, RULE_text = 11, RULE_id = 12, 
		RULE_ruleid = 13;
	public static final String[] ruleNames = {
		"init", "rulelist", "rule_", "lhs", "rhs", "alternatives", "alternative", 
		"element", "optional", "zeroormore", "oneormore", "text", "id", "ruleid"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'::='", "')'", "'('", "'}'", "'{'", "']'", "'['", "'|'", "'>'", 
		"'<'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LEND", "REND", 
		"BAR", "GT", "LT", "TERMINAL", "ID", "LETTER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bnf.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private PrintStream output = null;
	    private boolean first = true;
	    private String name;
	    private SimpleRule rule = new SimpleRule();
	    private LinkedList<IRule> listRules = new LinkedList<IRule>();

	    public bnfParser(TokenStream input, OutputStream out, String name) {
	        this(input);
	        this.output = new PrintStream(out);
	        this.name = name;
	    }

	    public LinkedList<IRule> getRules() {
	        return listRules;
	    }

	    private void print(String s) {
	        if (output != null)
	            output.print(s);
	    }

	    private void println(String s) {
	        print(s);
	        print("\n");
	    }

	    private void closeOutput() {
	        if (output != null)
	            output.close();
	    }

	    private void printFirst(String s) {
	        if (first) {
	            println(String.format("grammar %s;",name));
	            println("options {\n" +
	                "superClass=AParser;\n"+
	                "}\n"+
	            "@header {\n"+
	                "import com.etf.rti.p1.generator.AParser;\n" +
	                "import com.etf.rti.p1.ebnf.rules.IRule;\n" +
	                "import java.util.LinkedList;\n" +
	            "}\n" +
	            "@parser::members {\n" +
	                        "    public LinkedList<IRule> getRules() {\n" +
	                        "        return null;\n" +
	                        "    }}\n");
	            println(String.format("init : %s ;", s));
	        }
	        first = false;
	    }

	public bnfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public RulelistContext rulelist() {
			return getRuleContext(RulelistContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			rulelist();
			closeOutput();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulelistContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(bnfParser.EOF, 0); }
		public List<Rule_Context> rule_() {
			return getRuleContexts(Rule_Context.class);
		}
		public Rule_Context rule_(int i) {
			return getRuleContext(Rule_Context.class,i);
		}
		public RulelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rulelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterRulelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitRulelist(this);
		}
	}

	public final RulelistContext rulelist() throws RecognitionException {
		RulelistContext _localctx = new RulelistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rulelist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LT) {
				{
				{
				setState(31);
				rule_();
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_Context extends ParserRuleContext {
		public LhsContext lhs;
		public RhsContext rhs;
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(bnfParser.ASSIGN, 0); }
		public RhsContext rhs() {
			return getRuleContext(RhsContext.class,0);
		}
		public Rule_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterRule_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitRule_(this);
		}
	}

	public final Rule_Context rule_() throws RecognitionException {
		Rule_Context _localctx = new Rule_Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_rule_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			((Rule_Context)_localctx).lhs = lhs();
			setState(40);
			match(ASSIGN);
			setState(41);
			((Rule_Context)_localctx).rhs = rhs();
			 printFirst(((Rule_Context)_localctx).lhs.v);
			                      println(((Rule_Context)_localctx).lhs.v);
			                      println(((Rule_Context)_localctx).rhs.v);
			                      println(";");
			                      rule.setRule(new Nonterminal(((Rule_Context)_localctx).lhs.v));
			                      listRules.addLast(rule);
			                      rule = new SimpleRule();
			                      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LhsContext extends ParserRuleContext {
		public String v;
		public IdContext id;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public LhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lhs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterLhs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitLhs(this);
		}
	}

	public final LhsContext lhs() throws RecognitionException {
		LhsContext _localctx = new LhsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lhs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			((LhsContext)_localctx).id = id();
			((LhsContext)_localctx).v =  ((LhsContext)_localctx).id.v;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RhsContext extends ParserRuleContext {
		public String v;
		public AlternativesContext alternatives;
		public AlternativesContext alternatives() {
			return getRuleContext(AlternativesContext.class,0);
		}
		public RhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rhs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterRhs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitRhs(this);
		}
	}

	public final RhsContext rhs() throws RecognitionException {
		RhsContext _localctx = new RhsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rhs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			((RhsContext)_localctx).alternatives = alternatives("\n\t|");
			((RhsContext)_localctx).v =  "\t: " + ((RhsContext)_localctx).alternatives.v;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativesContext extends ParserRuleContext {
		public String conector;
		public String v;
		public AlternativeContext a;
		public AlternativeContext b;
		public List<AlternativeContext> alternative() {
			return getRuleContexts(AlternativeContext.class);
		}
		public AlternativeContext alternative(int i) {
			return getRuleContext(AlternativeContext.class,i);
		}
		public List<TerminalNode> BAR() { return getTokens(bnfParser.BAR); }
		public TerminalNode BAR(int i) {
			return getToken(bnfParser.BAR, i);
		}
		public AlternativesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AlternativesContext(ParserRuleContext parent, int invokingState, String conector) {
			super(parent, invokingState);
			this.conector = conector;
		}
		@Override public int getRuleIndex() { return RULE_alternatives; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterAlternatives(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitAlternatives(this);
		}
	}

	public final AlternativesContext alternatives(String conector) throws RecognitionException {
		AlternativesContext _localctx = new AlternativesContext(_ctx, getState(), conector);
		enterRule(_localctx, 10, RULE_alternatives);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((AlternativesContext)_localctx).a = alternative();
			((AlternativesContext)_localctx).v =  ((AlternativesContext)_localctx).a.v; rule.setNewOptionForInsert();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BAR) {
				{
				{
				setState(52);
				match(BAR);
				setState(53);
				((AlternativesContext)_localctx).b = alternative();
				_localctx.v += conector + ((AlternativesContext)_localctx).b.v; rule.setNewOptionForInsert();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativeContext extends ParserRuleContext {
		public String v;
		public ElementContext element;
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public AlternativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterAlternative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitAlternative(this);
		}
	}

	public final AlternativeContext alternative() throws RecognitionException {
		AlternativeContext _localctx = new AlternativeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_alternative);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(61);
					((AlternativeContext)_localctx).element = element();
					 if (_localctx.v == null) ((AlternativeContext)_localctx).v =  ((AlternativeContext)_localctx).element.v; else _localctx.v += " " + ((AlternativeContext)_localctx).element.v;
					}
					} 
				}
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public String v;
		public OptionalContext optional;
		public ZeroormoreContext zeroormore;
		public OneormoreContext oneormore;
		public TextContext t;
		public IdContext id;
		public OptionalContext optional() {
			return getRuleContext(OptionalContext.class,0);
		}
		public ZeroormoreContext zeroormore() {
			return getRuleContext(ZeroormoreContext.class,0);
		}
		public OneormoreContext oneormore() {
			return getRuleContext(OneormoreContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_element);
		try {
			setState(84);
			switch (_input.LA(1)) {
			case REND:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				((ElementContext)_localctx).optional = optional();
				((ElementContext)_localctx).v =  ((ElementContext)_localctx).optional.v;
				}
				break;
			case RBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				((ElementContext)_localctx).zeroormore = zeroormore();
				((ElementContext)_localctx).v =  ((ElementContext)_localctx).zeroormore.v;
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				((ElementContext)_localctx).oneormore = oneormore();
				((ElementContext)_localctx).v =  ((ElementContext)_localctx).oneormore.v;
				}
				break;
			case TERMINAL:
			case ID:
			case LETTER:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				((ElementContext)_localctx).t = text();
				((ElementContext)_localctx).v =  "\'" + StringEscapeUtils.escapeJava((((ElementContext)_localctx).t!=null?_input.getText(((ElementContext)_localctx).t.start,((ElementContext)_localctx).t.stop):null)) + "\'";
				                rule.insertElem(new Terminal((((ElementContext)_localctx).t!=null?_input.getText(((ElementContext)_localctx).t.start,((ElementContext)_localctx).t.stop):null)));
				}
				break;
			case LT:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				((ElementContext)_localctx).id = id();
				((ElementContext)_localctx).v =  ((ElementContext)_localctx).id.v;
				          rule.insertElem(new Nonterminal(((ElementContext)_localctx).id.v));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionalContext extends ParserRuleContext {
		public String v;
		public AlternativesContext alternatives;
		public TerminalNode REND() { return getToken(bnfParser.REND, 0); }
		public AlternativesContext alternatives() {
			return getRuleContext(AlternativesContext.class,0);
		}
		public TerminalNode LEND() { return getToken(bnfParser.LEND, 0); }
		public OptionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterOptional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitOptional(this);
		}
	}

	public final OptionalContext optional() throws RecognitionException {
		OptionalContext _localctx = new OptionalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_optional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(REND);
			setState(87);
			((OptionalContext)_localctx).alternatives = alternatives("\n\t|");
			((OptionalContext)_localctx).v =  ((OptionalContext)_localctx).alternatives.v + "?";
			setState(89);
			match(LEND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ZeroormoreContext extends ParserRuleContext {
		public String v;
		public AlternativesContext alternatives;
		public TerminalNode RBRACE() { return getToken(bnfParser.RBRACE, 0); }
		public AlternativesContext alternatives() {
			return getRuleContext(AlternativesContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(bnfParser.LBRACE, 0); }
		public ZeroormoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zeroormore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterZeroormore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitZeroormore(this);
		}
	}

	public final ZeroormoreContext zeroormore() throws RecognitionException {
		ZeroormoreContext _localctx = new ZeroormoreContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_zeroormore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(RBRACE);
			setState(92);
			((ZeroormoreContext)_localctx).alternatives = alternatives("\n\t|");
			((ZeroormoreContext)_localctx).v =  ((ZeroormoreContext)_localctx).alternatives.v + "*";
			setState(94);
			match(LBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OneormoreContext extends ParserRuleContext {
		public String v;
		public AlternativesContext alternatives;
		public TerminalNode RPAREN() { return getToken(bnfParser.RPAREN, 0); }
		public AlternativesContext alternatives() {
			return getRuleContext(AlternativesContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(bnfParser.LPAREN, 0); }
		public OneormoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneormore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterOneormore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitOneormore(this);
		}
	}

	public final OneormoreContext oneormore() throws RecognitionException {
		OneormoreContext _localctx = new OneormoreContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_oneormore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(RPAREN);
			setState(97);
			((OneormoreContext)_localctx).alternatives = alternatives("\n\t|");
			((OneormoreContext)_localctx).v =  ((OneormoreContext)_localctx).alternatives.v + "+";
			setState(99);
			match(LPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public List<TerminalNode> TERMINAL() { return getTokens(bnfParser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(bnfParser.TERMINAL, i);
		}
		public List<TerminalNode> LETTER() { return getTokens(bnfParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(bnfParser.LETTER, i);
		}
		public List<TerminalNode> ID() { return getTokens(bnfParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(bnfParser.ID, i);
		}
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitText(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_text);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(101);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TERMINAL) | (1L << ID) | (1L << LETTER))) != 0)) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(104); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public String v;
		public RuleidContext ruleid;
		public TerminalNode LT() { return getToken(bnfParser.LT, 0); }
		public RuleidContext ruleid() {
			return getRuleContext(RuleidContext.class,0);
		}
		public TerminalNode GT() { return getToken(bnfParser.GT, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bnfListener ) ((bnfListener)listener).exitId(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(LT);
			setState(107);
			((IdContext)_localctx).ruleid = ruleid();
			setState(108);
			match(GT);
			((IdContext)_localctx).v =  (((IdContext)_localctx).ruleid!=null?_input.getText(((IdContext)_localctx).ruleid.start,((IdContext)_localctx).ruleid.stop):null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
